answer/7.Ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-hi
  name: nginx-hi
  namespace: ing-internal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-hi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-hi
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
